--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^1.0.3",
-		"@sveltejs/adapter-node": "^1.2.4",
-		"@sveltejs/kit": "^1.20.2",
-		"autoprefixer": "^10.4.14",
-		"eslint": "^8.42.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.24",
-		"svelte": "^3.59.1",
-		"svelte-check": "^3.4.3",
-		"tailwindcss": "^3.3.2",
-		"typescript": "^4.9.5",
-		"vite": "^4.3.9"
+		"@sveltejs/adapter-node": "^1.3.1",
+		"@sveltejs/kit": "^1.27.3",
+		"autoprefixer": "^10.4.16",
+		"eslint": "^8.53.0",
+		"postcss": "^8.4.31",
+		"svelte": "^4.2.2",
+		"svelte-check": "^3.5.2",
+		"tailwindcss": "^3.3.5",
+		"typescript": "^5.2.2",
+		"vite": "^4.5.0",
+        "eslint-plugin-svelte": "^2.34.1"
 	},
 	"type": "module"
 }
